# calendar-analytics

./: README.md  pyproject.toml  setup.py
calendar_analytics/: __init__.py  cli.py
calendar_analytics/analytics/: __init__.py  cross_functional.py  insights_engine.py  manager_analytics.py  meeting_analyzer.py  text_analyzer.py
calendar_analytics/data_loaders/: __init__.py  data_processor.py  hris_loader.py  outlook_loader.py
calendar_analytics/models/: __init__.py  calendar_event.py  employee.py
calendar_analytics/reports/: __init__.py
calendar_analytics/utils/: __init__.py  report_generator.py  sample_data_generator.py
docs/: business-details.md  sample-outputs.md  tech-spec.md
tests/: __init__.py  test_analytics.py  test_models.py
