[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calendar-analytics"
version = "1.0.0"
description = "A comprehensive analytics platform for Outlook 365 calendar data with HRIS integration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Calendar Analytics Team"}
]
keywords = [
    "calendar",
    "analytics",
    "outlook",
    "hris",
    "meetings",
    "productivity",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
viz = [
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "plotly>=5.0.0",
]

[project.scripts]
calendar-analytics = "calendar_analytics.cli:main"

[project.urls]
Homepage = "https://github.com/example/calendar-analytics"
Documentation = "https://github.com/example/calendar-analytics#readme"
Repository = "https://github.com/example/calendar-analytics"

[tool.setuptools.packages.find]
where = ["."]
include = ["calendar_analytics*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D107", "D203", "D213"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=calendar_analytics --cov-report=term-missing"
